; ModuleID = '/home/carl/AnghaBench/freebsd/crypto/openssh/extr_scp.c_emit_expansion.c'
source_filename = "/home/carl/AnghaBench/freebsd/crypto/openssh/extr_scp.c_emit_expansion.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i32, i32, i32, i32, i8***, i64*)* @emit_expansion to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @emit_expansion(i8* %0, i32 %1, i32 %2, i32 %3, i32 %4, i8*** %5, i64* %6) #0 {
  %8 = alloca i32, align 4
  %9 = alloca i8*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i8***, align 8
  %15 = alloca i64*, align 8
  %16 = alloca i8*, align 8
  %17 = alloca i32, align 4
  %18 = alloca i32, align 4
  store i8* %0, i8** %9, align 8
  store i32 %1, i32* %10, align 4
  store i32 %2, i32* %11, align 4
  store i32 %3, i32* %12, align 4
  store i32 %4, i32* %13, align 4
  store i8*** %5, i8**** %14, align 8
  store i64* %6, i64** %15, align 8
  store i32 0, i32* %17, align 4
  %19 = load i8*, i8** %9, align 8
  %20 = load i32, i32* %11, align 4
  %21 = sext i32 %20 to i64
  %22 = getelementptr inbounds i8, i8* %19, i64 %21
  %23 = getelementptr inbounds i8, i8* %22, i64 1
  %24 = call i32 @strlen(i8* %23)
  store i32 %24, i32* %18, align 4
  %25 = load i32, i32* %10, align 4
  %26 = load i32, i32* %13, align 4
  %27 = load i32, i32* %12, align 4
  %28 = sub nsw i32 %26, %27
  %29 = add nsw i32 %25, %28
  %30 = load i32, i32* %18, align 4
  %31 = add nsw i32 %29, %30
  %32 = add nsw i32 %31, 1
  %33 = call i8* @malloc(i32 %32)
  store i8* %33, i8** %16, align 8
  %34 = icmp eq i8* %33, null
  br i1 %34, label %35, label %36

35:                                               ; preds = %7
  store i32 -1, i32* %8, align 4
  br label %100

36:                                               ; preds = %7
  %37 = load i32, i32* %10, align 4
  %38 = icmp sgt i32 %37, 0
  br i1 %38, label %39, label %45

39:                                               ; preds = %36
  %40 = load i8*, i8** %16, align 8
  %41 = load i8*, i8** %9, align 8
  %42 = load i32, i32* %10, align 4
  %43 = call i32 @memcpy(i8* %40, i8* %41, i32 %42)
  %44 = load i32, i32* %10, align 4
  store i32 %44, i32* %17, align 4
  br label %45

45:                                               ; preds = %39, %36
  %46 = load i32, i32* %13, align 4
  %47 = load i32, i32* %12, align 4
  %48 = sub nsw i32 %46, %47
  %49 = icmp sgt i32 %48, 0
  br i1 %49, label %50, label %68

50:                                               ; preds = %45
  %51 = load i8*, i8** %16, align 8
  %52 = load i32, i32* %17, align 4
  %53 = sext i32 %52 to i64
  %54 = getelementptr inbounds i8, i8* %51, i64 %53
  %55 = load i8*, i8** %9, align 8
  %56 = load i32, i32* %12, align 4
  %57 = sext i32 %56 to i64
  %58 = getelementptr inbounds i8, i8* %55, i64 %57
  %59 = load i32, i32* %13, align 4
  %60 = load i32, i32* %12, align 4
  %61 = sub nsw i32 %59, %60
  %62 = call i32 @memcpy(i8* %54, i8* %58, i32 %61)
  %63 = load i32, i32* %13, align 4
  %64 = load i32, i32* %12, align 4
  %65 = sub nsw i32 %63, %64
  %66 = load i32, i32* %17, align 4
  %67 = add nsw i32 %66, %65
  store i32 %67, i32* %17, align 4
  br label %68

68:                                               ; preds = %50, %45
  %69 = load i32, i32* %18, align 4
  %70 = icmp sgt i32 %69, 0
  br i1 %70, label %71, label %86

71:                                               ; preds = %68
  %72 = load i8*, i8** %16, align 8
  %73 = load i32, i32* %17, align 4
  %74 = sext i32 %73 to i64
  %75 = getelementptr inbounds i8, i8* %72, i64 %74
  %76 = load i8*, i8** %9, align 8
  %77 = load i32, i32* %11, align 4
  %78 = sext i32 %77 to i64
  %79 = getelementptr inbounds i8, i8* %76, i64 %78
  %80 = getelementptr inbounds i8, i8* %79, i64 1
  %81 = load i32, i32* %18, align 4
  %82 = call i32 @memcpy(i8* %75, i8* %80, i32 %81)
  %83 = load i32, i32* %18, align 4
  %84 = load i32, i32* %17, align 4
  %85 = add nsw i32 %84, %83
  store i32 %85, i32* %17, align 4
  br label %86

86:                                               ; preds = %71, %68
  %87 = load i8*, i8** %16, align 8
  %88 = load i32, i32* %17, align 4
  %89 = sext i32 %88 to i64
  %90 = getelementptr inbounds i8, i8* %87, i64 %89
  store i8 0, i8* %90, align 1
  %91 = load i8*, i8** %16, align 8
  %92 = load i8***, i8**** %14, align 8
  %93 = load i64*, i64** %15, align 8
  %94 = call i64 @append(i8* %91, i8*** %92, i64* %93)
  %95 = icmp ne i64 %94, 0
  br i1 %95, label %96, label %99

96:                                               ; preds = %86
  %97 = load i8*, i8** %16, align 8
  %98 = call i32 @free(i8* %97)
  store i32 -1, i32* %8, align 4
  br label %100

99:                                               ; preds = %86
  store i32 0, i32* %8, align 4
  br label %100

100:                                              ; preds = %99, %96, %35
  %101 = load i32, i32* %8, align 4
  ret i32 %101
}

declare dso_local i32 @strlen(i8*) #1

declare dso_local i8* @malloc(i32) #1

declare dso_local i32 @memcpy(i8*, i8*, i32) #1

declare dso_local i64 @append(i8*, i8***, i64*) #1

declare dso_local i32 @free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
